cl-review: fixed Author alignment

--- a/less/cl-review.less
+++ b/less/cl-review.less
@@ -29,7 +29,6 @@
 		}
 		&-occupation {
 			display: inline-block;
-			vertical-align: top;
 			font-size: 0.9em;
 			color: #999;
 		}
